--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,8 @@
 @import url("~/platform.css");
+ActionBar {
+    background-color: black;
+    color: white;
+}
 Page {
     background-color: white;
     font-size: 15;
