--- a/app/pages/login/login-common.css
+++ b/app/pages/login/login-common.css
@@ -14,7 +14,7 @@ Button, TextField {
     margin-bottom: 10;
 }
 .submit-button {
-    background-color: #CB1D00;
+    background-color: #06cb00;
     color: white;
     margin-top: 20;
 }
